<resources>
    <string name="app_name">New York Times Search</string>
    <string name="Hint">Enter search query</string>
    <string name="Search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="sort_prompt">Sort by</string>
    <string name="sports">Sports</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fasion &amp; Style</string>
</resources>
