<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.nytimessearch.FilterActivity">

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="Sort Order"
        android:layout_below="@+id/tvBeginDate"
        android:layout_alignRight="@+id/tvBeginDate"
        android:layout_alignEnd="@+id/tvBeginDate" />

    <TextView
        android:id="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="News Desk Values"
        android:layout_below="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/tvSortOrder"
        android:layout_alignStart="@+id/tvSortOrder" />

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="Begin Date"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnSave"
        android:layout_toStartOf="@+id/btnSave"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNewsDesk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="127dp"
        android:onClick="onSave"
        android:text="SAVE"
        tools:text="@string/save" />

    <Spinner
        android:id="@+id/sortOrder"
        android:layout_width="wrap_content"
        android:entries="@array/sort_array"
        android:prompt="@string/sort_prompt"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_alignStart="@+id/tvDate"
        android:layout_alignTop="@+id/tvSortOrder" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:layout_alignBaseline="@+id/tvNewsDesk"
        android:layout_alignBottom="@+id/tvNewsDesk"
        android:layout_alignLeft="@+id/sortOrder"
        android:layout_alignStart="@+id/sortOrder" />
    <CheckBox
        android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion"
        android:layout_below="@+id/cbSports"
        android:layout_alignLeft="@+id/cbSports"
        android:layout_alignStart="@+id/cbSports" />
    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:onClick="showDatePickerDialog"
        android:layout_alignBaseline="@+id/tvBeginDate"
        android:layout_alignBottom="@+id/tvBeginDate"
        android:layout_toRightOf="@+id/tvNewsDesk"
        android:layout_toEndOf="@+id/tvNewsDesk"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp" />

</RelativeLayout>
