<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.codepath.nytimessearch.FilterDialogFragment">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="Begin Date"
        android:layout_alignParentTop="true"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="32dp"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"/>

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="Sort Order"
        android:layout_below="@+id/tvBeginDate"
        android:layout_alignRight="@+id/tvBeginDate"
        android:layout_alignEnd="@+id/tvBeginDate"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"/>

    <TextView
        android:id="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="News Desk Values"
        android:layout_below="@+id/sortOrder"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"/>

    <Spinner
        android:id="@+id/sortOrder"
        android:layout_width="wrap_content"
        android:entries="@array/sort_array"
        android:prompt="@string/sort_prompt"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_alignStart="@+id/tvDate"
        android:layout_alignTop="@+id/tvSortOrder" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:layout_alignBaseline="@+id/tvNewsDesk"
        android:layout_alignBottom="@+id/tvNewsDesk"
        android:layout_alignLeft="@+id/sortOrder"
        android:layout_alignStart="@+id/sortOrder" />
    <CheckBox
        android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion"
        android:layout_below="@+id/cbSports"
        android:layout_alignLeft="@+id/cbSports"
        android:layout_alignStart="@+id/cbSports" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25/12/2000"
        android:layout_alignBaseline="@+id/tvBeginDate"
        android:layout_alignBottom="@+id/tvBeginDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="89dp"
        android:layout_marginEnd="89dp" />

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:layout_below="@+id/cbArts"
        android:text="@string/sports" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNewsDesk"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:layout_marginTop="127dp"
        android:onClick="onSave"
        android:text="SAVE"
        android:textColor="@android:color/white"
        tools:text="@string/save" />
</RelativeLayout>
